--- a/Xcode.html
+++ b/Xcode.html
@@ -44,32 +44,30 @@
     <a href="Xcode.html">Login & Shop</a>
   </nav>
 
-  <h1>Car Clicker</h1>
+  <h1>Login & Shop</h1>
 
   <!-- New Header -->
-  <h2>Car Clicker is a game where players collect cars by clicking an image that changes with each click. Upgrades like mechanics and manufacturers increase car earnings, and the design adjusts as players progress. The goal is to grow the car collection as big as you can!.</h2>
+  <h2>On XCode I have made two working apps. </h2>
 
   <!-- Code Video -->
   <div class="media">
     <video id="CCCode" controls>
-      <source src="Photo & Audio/CCCode.mp4" type="video/mp4">
-      Your browser does not support the video tag.
+      <source src="Photo & Audio/ShopVideo.mp4" type="video/mp4">
     </video>
     <ul>
-      <li>The game increases cars owned every second based on the number of manufacturers, which reflect automatic upgrades.</li>
-      <li>The mechanic upgrade increases the number of cars earned per click, with the cost rising by 50 cars for each upgrade.</li>
+      <li>BP1</li>
+      <li>BP2</li>
     </ul>
   </div>
 
   <!-- Game Video -->
   <div class="media">
     <video id="CCGameplay" controls>
-      <source src="Photo & Audio/CCGameplay.mp4" type="video/mp4">
-      Your browser does not support the video tag.
+      <source src="Photo & Audio/LoginVideo.mp4" type="video/mp4">
     </video>
     <ul>
-      <li>Players can click an image of one of my favorite cars, which changes randomly from a list of cars each time they click.</li>
-      <li>The game's background and button designs change color based on whether the player has enough cars to purchase an upgrade.</li>
+      <li>BP3</li>
+      <li>BP4</li>
     </ul>
   </div>
 
